--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,28 @@ env:
   IMAGE_NAME: ghcr.io/hjali7/team-communication-platform
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r app/requirements.txt
+
+      - name: Run tests with pytest
+        run: python -m pytest tests/
+
   build_and_push:
+    # این جاب حالا به جاب تست وابسته است
+    needs: test
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -22,9 +43,7 @@ jobs:
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
-          # نام کاربری، یوزرنیم گیت‌هاب شماست
           username: ${{ github.actor }}
-          # پسورد، توکنی است که به صورت سکرت ذخیره کردیم
           password: ${{ secrets.GH_PAT }}
 
       - name: Build and push Docker image
@@ -33,3 +52,19 @@ jobs:
           context: .
           push: true
           tags: ${{ env.IMAGE_NAME }}:latest
+
+  # جاب deploy فعلا بدون تغییر باقی می‌ماند
+  deploy:
+    needs: build_and_push
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Set up kubectl
+        uses: azure/setup-kubectl@v3
+      - name: Deploy to Kubernetes
+        uses: actions-hub/kubectl@master
+        env:
+          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG }}
+        with:
+          args: apply -f kubernetes/
