--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,18 +53,18 @@ jobs:
           push: true
           tags: ${{ env.IMAGE_NAME }}:latest
 
-  # جاب deploy فعلا بدون تغییر باقی می‌ماند
-  deploy:
-    needs: build_and_push
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-      - name: Set up kubectl
-        uses: azure/setup-kubectl@v3
-      - name: Deploy to Kubernetes
-        uses: actions-hub/kubectl@master
-        env:
-          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG }}
-        with:
-          args: apply -f kubernetes/
+  # ---------
+  # deploy:
+  #   needs: build_and_push
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout repository
+  #       uses: actions/checkout@v3
+  #     - name: Set up kubectl
+  #       uses: azure/setup-kubectl@v3
+  #     - name: Deploy to Kubernetes
+  #       uses: actions-hub/kubectl@master
+  #       env:
+  #         KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG }}
+  #       with:
+  #         args: apply -f kubernetes/
