--- a/kubernetes/deployment.yml
+++ b/kubernetes/deployment.yml
@@ -22,17 +22,15 @@ spec:
             - name: DB_HOST
               value: "prometheus-postgresql"
             - name: POSTGRES_USER
-              valueFrom:
-                secretKeyRef:
-                  name: prometheus-postgresql
-                  key: postgres-username
+              # این مقدار را مستقیم وارد می‌کنیم چون در helm install آن را 'user' تنظیم کردیم
+              value: "user"
+            - name: POSTGRES_DB
+              # این مقدار را مستقیم وارد می‌کنیم چون در helm install آن را 'db' تنظیم کردیم
+              value: "db"
             - name: POSTGRES_PASSWORD
               valueFrom:
                 secretKeyRef:
+                  # نام سکرت درست است
                   name: prometheus-postgresql
+                  # کلید صحیح برای پسورد در چارت Bitnami این است
                   key: postgres-password
-            - name: POSTGRES_DB
-              valueFrom:
-                secretKeyRef:
-                  name: prometheus-postgresql
-                  key: postgres-database
