--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,17 +13,14 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.9'
-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r app/requirements.txt
-
       - name: Run tests with pytest
         run: python -m pytest tests/
 
@@ -33,7 +30,6 @@ jobs:
     permissions:
       contents: read
       packages: write
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -45,25 +41,14 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GH_PAT }}
 
+      - name: Set Image Tag
+        # این مرحله، ۷ کاراکتر اول شناسه کامیت را در یک متغیر قرار می‌دهد
+        run: echo "IMAGE_TAG=$(echo ${GITHUB_SHA} | cut -c1-7)" >> $GITHUB_ENV
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
           context: .
           push: true
-          tags: ${{ env.IMAGE_NAME }}:latest
-
-  # ---------
-  # deploy:
-  #   needs: build_and_push
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout repository
-  #       uses: actions/checkout@v3
-  #     - name: Set up kubectl
-  #       uses: azure/setup-kubectl@v3
-  #     - name: Deploy to Kubernetes
-  #       uses: actions-hub/kubectl@master
-  #       env:
-  #         KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG }}
-  #       with:
-  #         args: apply -f kubernetes/
+          # اینجا از تگ جدید و یکتا استفاده می‌کنیم
+          tags: ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
